Eerste aanpassingen voor week 2 (ook om die action te triggeren).

--- a/topics/2a1_methoden.ipynb
+++ b/topics/2a1_methoden.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "2881982b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public static void printAdresDoorenveste() {\n",
@@ -43,7 +47,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "fa85e6d8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -64,60 +72,11 @@
    "id": "578592a6",
    "metadata": {},
    "source": [
-    "In de methode definitie komt een aantal **keywords** voor: *public*, *static*, *void*.\n",
+    "In de methode definitie komt een aantal **keywords** voor: `public`, `static`, `void`.\n",
     "\n",
-    "Een **keyword** is een gereserveerd woord gebruikt in een programmeertaal, die een specifieke betekenis heeft voor de compiler (of interpreter).\n",
+    "Een **keyword** is een gereserveerd woord gebruikt in een programmeertaal, die een specifieke betekenis heeft voor de compiler (of interpreter).  Het **keyword** *void* geeft aan dat de methode niets teruggeeft.  De **keywords** `public` en `static` hebben te maken met de beschikbaarheid van een **methode**. Voor dit moment gebruiken we deze **keywords** zonder verdere toelichting.\n",
     "\n",
-    "Het **keyword** *void* geeft aan dat de methode niets teruggeeft.\n",
-    "\n",
-    "De **keywords** *public* en *static* hebben te maken met de beschikbaarheid van een **methode**. Voor dit moment gebruiken we deze **keywords** zonder specifiek op deze keywords in te gaan.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cf2c586",
-   "metadata": {},
-   "source": [
-    "## Volgorde van uitvoering\n",
-    "\n",
-    "Wat verschijnt op het scherm? In welke volgorde worden de methodes uitgevoerd?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "2b25b4bb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "public static void main(String[] args) {\n",
-    "    test1();\n",
-    "    test2();\n",
-    "    test3();\n",
-    "}\n",
-    "\n",
-    "public static void test3() {\n",
-    "    test1();\n",
-    "    System.out.println(\"Test 3\");\n",
-    "    test1();\n",
-    "}\n",
-    "public static void test2() {\n",
-    "    System.out.println(\"Test 2\");\n",
-    "    test3();\n",
-    "}\n",
-    "\n",
-    "public static void test1() {\n",
-    "    System.out.println(\"Test 1 !\");\n",
-    "}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "20f15c2b",
-   "metadata": {},
-   "source": [
-    "Methodes worden niet altijd op volgorde van plaats in de code uitgevoerd. De volgorde van uitvoering wordt bepaald door het moment van aanroep. Verder kan een methode aanweiz zijn "
+    "In tegenstelling tot bijvoorbeeld Python is de volgorde waarop de methoden zijn gedefinieerd niet van belang. Je kunt een methode aanroepen vóórdat deze in de code is gedefinieerd."
    ]
   },
   {
@@ -127,11 +86,9 @@
    "source": [
     "## Redenen om methoden te schrijven\n",
     "Er zijn verschillende redenen om methoden te schrijven:\n",
-    "- Code wordt leesbaarder\n",
-    "Methoden bieden de mogelijkheid om een reeks statements te groeperen en een naam te geven.\n",
-    "- Herhaling an code voorkomen\n",
-    "In plaats van duplicate code, kan code herhaald worden door een methode meerdere  aan te roepen.\n",
-    "- Probleem opdelen i \n"
+    "- Code wordt leesbaarder: methoden bieden de mogelijkheid om een reeks statements te groeperen en een naam te geven.\n",
+    "- Herhaling an code voorkomen: in plaats van duplicate code, kan code herhaald worden door een methode meerdere keren aan te roepen.\n",
+    "- Probleem opdelen in kleinere subproblemen."
    ]
   },
   {
@@ -140,66 +97,28 @@
    "metadata": {},
    "source": [
     "## Parameters en argumenten\n",
-    "Veel methodes vereisen *argumenten*. Een *argument* is een waarde die wordt meegegeven bij aanroep van een methode. Dit kan één argument zijn, maar ook meerdere argumenten.\n",
     "\n",
-    "*Argumenten* worden bij aanroep meegegeven door ze tussen haakjes te plaatsen, die na de naam van de methode staan.\n",
+    "Veel methodes vereisen *argumenten*. Een *argument* is een waarde die wordt meegegeven bij aanroep van een methode. Dit kan één argument zijn, maar ook meerdere argumenten. *Argumenten* worden bij aanroep meegegeven door ze tussen haakjes te plaatsen, die na de naam van de methode staan. \n",
     "\n",
-    "De argumenten worden toegekend aan variabelen die in de methode definitie staan. Deze variabelen worden *parameters* genoemd.\n",
+    "De argumenten worden toegekend aan variabelen die in de methode definitie staan. Deze variabelen worden *parameters* genoemd. Meerdere parameters worden gescheiden door komma's. Een methode met een drie argumenten kan als volgt worden gedefiniëerd in Java:\n",
     "\n",
-    "Een nieuwe methode met een argument kan als volgt worden gedefiniëerd in Java:\n",
+    "\n",
     "```Java\n",
     "public static void <naam>(<argument type> <argument naam>) {\n",
     "\t// code van de methode\n",
     "}\n",
-    "```\n",
-    "\n",
-    "Bijvoorbeeld:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "165f1b92",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hanzehogeschool Van Doorenveste\n",
-      "t.a.v. Meneer de Vries\n",
-      "Zernikeplein 11\n",
-      "9747 AS  Groningen\n"
-     ]
-    }
-   ],
-   "source": [
-    "public static void printAdresDoorenveste(String naam) {\n",
-    "    System.out.println(\"Hanzehogeschool Van Doorenveste\");\n",
-    "    System.out.println(\"t.a.v. \"+naam);\n",
-    "    System.out.println(\"Zernikeplein 11\");\n",
-    "    System.out.println(\"9747 AS  Groningen\");\n",
-    "}\n",
-    "\n",
-    "printAdresDoorenveste(\"Meneer de Vries\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06d1f6df",
-   "metadata": {},
-   "source": [
-    "## Meerdere parameters\n",
-    "Het is mogelijk om meerdere *argumenten* mee te geven aan een methode. De methode heeft dan meerdere *parameters* nodig. Deze parameters worden door een komma gescheiden meegegeven.\n",
-    "\n",
-    "Bijvoorbeeld:"
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "id": "aa136096",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -228,7 +147,7 @@
    "id": "4935fe83",
    "metadata": {},
    "source": [
-    "## Methodes van klasse Math"
+    "## Methodes van klasse `Math`"
    ]
   },
   {
@@ -236,20 +155,18 @@
    "id": "422c516a",
    "metadata": {},
    "source": [
-    "Naast eigen geschreven methodes, bevat Java zelf ook veel methodes die standaard meegeleverd worden.\n",
-    "\n",
-    "Een voorbeeld daarvan zijn de methodes uit de klasse *Math*. Deze klasse bevat een uitgebreide collectie wiskundige methodes.\n",
-    "\n",
-    "Een volledig overzicht is te vinden in de documentatie van Oracle, https://docs.oracle.com/javase/9/docs/api/java/lang/Math.html\n",
-    "\n",
-    "Voorbeeld:\n"
+    "De klasssen die in de *standard library* van Java zitten bevatten uiteraard ook (veel) methoden. Een voorbeeld daarvan zijn de methodes uit de klasse `Math` – een klasse met een uitgebreide collectie wiskundige methodes. Een volledig overzicht is te vinden in [de documentatie van Oracle](https://docs.oracle.com/javase/9/docs/api/java/lang/Math.html).\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "id": "6dd50871",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -272,20 +189,18 @@
    "id": "57629c56",
    "metadata": {},
    "source": [
-    "De 3.14 is een benadering van de waarde van pi.\n",
-    "\n",
-    "Klassen kunnen naast methoden ook constanten bevatten. Constanten zijn te herkennen doordat ze volledig met hoofdletters worden geschreven.\n",
-    "\n",
-    "Een van de constanten uit de klasse Math is PI, zodat er een nauwkeurige waarde van pi beschikbaar is.\n",
-    "\n",
-    "Voorbeeld:\n"
+    "Klassen kunnen naast methoden ook constanten bevatten. Constanten zijn te herkennen doordat ze volledig met hoofdletters worden geschreven. Een van de constanten uit de klasse `Math` is `PI`, zodat er een nauwkeurige waarde van pi beschikbaar is."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "id": "d74f3a66",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -299,7 +214,7 @@
    "source": [
     "int oppervlakte = (int)Math.round( Math.PI*5*5 ); // Oppervlakte van een cirkel met een diameter van 10 centimeter\n",
     "System.out.println(\"Oppervlakte is: \"+oppervlakte);\n",
-    "// Compositie\n",
+    "// Of we doen het in één keer\n",
     "System.out.println(\"Oppervlakte is: \"+Math.round( Math.PI*5*5 ));\n",
     "\n"
    ]
@@ -309,7 +224,7 @@
    "id": "2cb62c80",
    "metadata": {},
    "source": [
-    "Contanten zorgen voor leesbaarheid. Daarnaast maken ze het programmeren gemakkelijker doordat de programmeur niet hoeft te weten wat de exacte waarde is."
+    "Contanten zorgen voor leesbaarheid en ze maken het programmeren gemakkelijker doordat de programmeur niet hoeft te weten wat de exacte waarde is."
    ]
   },
   {
@@ -318,9 +233,8 @@
    "metadata": {},
    "source": [
     "## Return waardes\n",
-    "Het is mogelijk om een methode een waarde terug te laten geven.\n",
     "\n",
-    "In dat geval staat op de plaats van het **keyword** *void* Het datatype van deze waarde.\n",
+    "Vaak wil je een methode een waarde terug laten geven. In dat geval staat op de plaats van het **keyword** `void` het datatype van de waarde die teruggegeven wordt.\n",
     "\n",
     "Bijvoorbeeld:"
    ]
@@ -329,7 +243,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "d1ac291b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -360,7 +278,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "93079c8f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -394,15 +316,17 @@
    "id": "a42ee052",
    "metadata": {},
    "source": [
-    "Een veel gemaakte beginnersfout is te veel code in één keer proberen te schrijven zonder tussentijds testen. Als het niet correct werkt, is het lastig te verklaren waarom.\n",
-    "\n",
-    "Een betere benadering is **incrementeel ontwikkelen**\n",
+    "Een veel gemaakte beginnersfout is te veel code in één keer proberen te schrijven zonder tussentijds testen. Als het niet correct werkt, is het lastig te verklaren waarom. Een betere benadering is **incrementeel ontwikkelen**\n",
     "\n",
     "Incrementeel ontwikkelen houdt in dat een probleem wordt opgelost door steeds kleine stukken werkende code te schrijven of toe te voegen, die niet direct het gewenste eindresultaat geven, maar wel gemakkelijk getest kunnen worden. Zo wordt in stapjes naar het resultaat toe gewerkt.\n",
     "\n",
-    "Voorbeeld: Schrijf een functie *distance* die de afstand berekent tussen twee coördinaten (x1, y1) en (x2, y2). Zowel de coördinaten als de afstand zijn van het type *double*.\n",
+    "Voorbeeld: Schrijf een methode `distance` die de afstand berekent tussen twee coördinaten (x1, y1) en (x2, y2). Zowel de coördinaten als de afstand zijn van het type `double`.\n",
     "\n",
-    "Een voorbeeld is (2,3) en (8,1): 6,32 (afgerond op twee cijfers achter de komma)\n",
+    "```java\n",
+    "distance(2, 3, 8, 1); //zou 6.32 terug moeten geven (afgerond op twee cijfers achter de komma)\n",
+    "```\n",
+    "\n",
+    "Een voorbeeld is (2,3) en (8,1): 6,32 ()\n",
     "\n",
     "Stap 1: Functie schrijven zonder inhoud, die tijdelijk een vaste waarde terug geeft."
    ]
@@ -411,7 +335,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "ead4c1e9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -434,14 +362,18 @@
    "id": "9134e6cc",
    "metadata": {},
    "source": [
-    "Stap 2: Bereken de horizontale (*dx*) en de verticale afstand (*dy)."
+    "Stap 2: Bereken de horizontale (`dx`) en de verticale afstand (`dy`)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "id": "58340a15",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -466,11 +398,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e6dd4db4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Stap 3: Neem de kwadraten van de afstanden en tel ze bij elkaar op."
    ]
@@ -479,7 +409,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "96fc0c24",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -514,7 +448,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "f2982de9",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -550,7 +488,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "a05cb306",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -584,7 +526,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "a0cac21c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
