Wijzigingen voor week 2.

--- a/topics/2a1_methoden.ipynb
+++ b/topics/2a1_methoden.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Methoden\n",
-    "Om een (regulier) programma in Java te schrijven, is de main-methode vereist. In de praktijk bestaat een programma echter uit veel methodes dan alleen main."
+    "Om een (regulier) programma in Java te schrijven, is de main-methode vereist. In de praktijk bestaat een programma echter uit veel methodes dan alleen je *entry point* (`main`)."
    ]
   },
   {
@@ -87,8 +87,18 @@
     "## Redenen om methoden te schrijven\n",
     "Er zijn verschillende redenen om methoden te schrijven:\n",
     "- Code wordt leesbaarder: methoden bieden de mogelijkheid om een reeks statements te groeperen en een naam te geven.\n",
-    "- Herhaling an code voorkomen: in plaats van duplicate code, kan code herhaald worden door een methode meerdere keren aan te roepen.\n",
+    "- Herhaling van code voorkomen: in plaats van duplicate code, kan code herhaald worden door een methode meerdere keren aan te roepen.\n",
     "- Probleem opdelen in kleinere subproblemen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70162ccf",
+   "metadata": {},
+   "source": [
+    "```{info}\n",
+    "Behalve dat code moet doen wat het moet doen, is de *leesbaarheid* van code van allergrootste belang. Code die onleesbaar is, in onbegrijpelijk en dus ononderhoudbaar, onoverdraagbaar en onaanpasbaar. Onthoud: [*code is for humans*](https://codeisforhumans.com/).\n",
+    "```"
    ]
   },
   {
@@ -100,14 +110,15 @@
     "\n",
     "Veel methodes vereisen *argumenten*. Een *argument* is een waarde die wordt meegegeven bij aanroep van een methode. Dit kan één argument zijn, maar ook meerdere argumenten. *Argumenten* worden bij aanroep meegegeven door ze tussen haakjes te plaatsen, die na de naam van de methode staan. \n",
     "\n",
-    "De argumenten worden toegekend aan variabelen die in de methode definitie staan. Deze variabelen worden *parameters* genoemd. Meerdere parameters worden gescheiden door komma's. Een methode met een drie argumenten kan als volgt worden gedefiniëerd in Java:\n",
-    "\n",
-    "\n",
     "```Java\n",
     "public static void <naam>(<argument type> <argument naam>) {\n",
     "\t// code van de methode\n",
     "}\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "De argumenten worden toegekend aan variabelen die in de methode definitie staan. Deze variabelen worden *parameters* genoemd. Meerdere parameters worden gescheiden door komma's. Een methode met een drie argumenten kan als volgt worden gedefiniëerd in Java:\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -189,7 +200,7 @@
    "id": "57629c56",
    "metadata": {},
    "source": [
-    "Klassen kunnen naast methoden ook constanten bevatten. Constanten zijn te herkennen doordat ze volledig met hoofdletters worden geschreven. Een van de constanten uit de klasse `Math` is `PI`, zodat er een nauwkeurige waarde van pi beschikbaar is."
+    "Klassen kunnen naast methoden ook constanten bevatten. Constanten zijn te herkennen doordat ze volledig met hoofdletters worden geschreven. Eén van de constanten uit de klasse `Math` is `PI`: een veel nauwkeuriger weergaven van pi dan 3.14. "
    ]
   },
   {
@@ -259,7 +270,7 @@
    ],
    "source": [
     "public static double oppervlakte_driehoek(double basis, double hoogte) {\n",
-    "    return basis * hoogte /2;\n",
+    "    return basis * hoogte / 2;\n",
     "}\n",
     "\n",
     "double oppervlakte = oppervlakte_driehoek(8, 10);\n",
@@ -295,12 +306,12 @@
    "source": [
     "// Print het aantal seconden dat is vertreken na middennacht op een bepaald tijdstip\n",
     "public static int seconden_na_middennacht(int uur, int minuut, int seconde) {\n",
-    "    int aantal_minuten = uur*60+minuut;\n",
-    "    return aantal_minuten*60 + seconde;\n",
+    "    int aantal_minuten = uur * 60 + minuut;\n",
+    "    return aantal_minuten * 60 + seconde;\n",
     "}\n",
     "\n",
-    "int s = seconden_na_middennacht(16,37,10);\n",
-    "System.out.println(\"Aantal seconden na middennacht om 16:37:10 is: \"+s);"
+    "int s = seconden_na_middennacht(16, 37, 10);\n",
+    "System.out.println(\"Aantal seconden na middennacht om 16:37:10 is: \" + s);"
    ]
   },
   {
@@ -316,11 +327,15 @@
    "id": "a42ee052",
    "metadata": {},
    "source": [
-    "Een veel gemaakte beginnersfout is te veel code in één keer proberen te schrijven zonder tussentijds testen. Als het niet correct werkt, is het lastig te verklaren waarom. Een betere benadering is **incrementeel ontwikkelen**\n",
+    "Een veel gemaakte beginnersfout is te veel code in één keer proberen te schrijven zonder tussentijds testen. Als het niet correct werkt, is het lastig te verklaren waarom. Een betere benadering is **incrementeel ontwikkelen**.\n",
     "\n",
     "Incrementeel ontwikkelen houdt in dat een probleem wordt opgelost door steeds kleine stukken werkende code te schrijven of toe te voegen, die niet direct het gewenste eindresultaat geven, maar wel gemakkelijk getest kunnen worden. Zo wordt in stapjes naar het resultaat toe gewerkt.\n",
     "\n",
-    "Voorbeeld: Schrijf een methode `distance` die de afstand berekent tussen twee coördinaten (x1, y1) en (x2, y2). Zowel de coördinaten als de afstand zijn van het type `double`.\n",
+    "Voorbeeld: Schrijf een methode `distance` die de afstand berekent tussen twee coördinaten (x1, y1) en (x2, y2). Zowel de coördinaten als de afstand zijn van het type `double`. De afstand tussen twee punten (in het platte vlak) kun je (met Pythagoras) als volgt berekenen:\n",
+    "\n",
+    "$$\n",
+    "d = \\sqrt{(x_1-x_2)^2 + (y_1-y_2)^2}\n",
+    "$$\n",
     "\n",
     "```java\n",
     "distance(2, 3, 8, 1); //zou 6.32 terug moeten geven (afgerond op twee cijfers achter de komma)\n",
