--- a/topics/3a_lussen_en_strings.ipynb
+++ b/topics/3a_lussen_en_strings.ipynb
@@ -57,7 +57,7 @@
     "tags": []
    },
    "source": [
-    "De conditie is in dit geval altijd waar en de boodschap zal eindeloos worden herhaald, een oneindige lus!"
+    "De conditie is in dit geval altijd waar en de boodschap zal eindeloos worden herhaald, een oneindige lus."
    ]
   },
   {
