--- a/topics/2a2_methoden_en_testen.ipynb
+++ b/topics/2a2_methoden_en_testen.ipynb
@@ -23,7 +23,7 @@
     "tags": []
    },
    "source": [
-    "Dit zijn aanvullende collegeteksten."
+    "Dit zijn optioneel aanvullende werkboekteksten. Bestudeer deze wanneer je nog wat moeite hebt met het hele idee van methoden, logica en conditionele uitdrukkingen."
    ]
   },
   {
@@ -37,6 +37,36 @@
    },
    "source": [
     "## De anatomie van een methode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d374c942-7480-49bc-aa9d-3b303a1fe106",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
+   "source": [
+    "```java\n",
+    "public static void main(String[] args) {\n",
+    "    System.out.println(\"Hello World\");\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebaca34e-22d1-4e92-bd8f-af20189d0345",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    },
+    "tags": []
+   },
+   "source": [
+    "Het voorbeeld dat we nu al zo vaak hebben gezien! We hebben hierdoor ook al kennisgemaakt met methoden, in dit geval de methode `main`. Een methode kan niet op zichzelf staan en is altijd een onderdeel van een klasse."
    ]
   },
   {
@@ -60,36 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebaca34e-22d1-4e92-bd8f-af20189d0345",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "Het voorbeeld dat we nu al zo vaak hebben gezien! We hebben hierdoor ook al kennisgemaakt met methoden, in dit geval de methode `main`. Een methode kan niet op zichzelf staan en is altijd een onderdeel van een klasse."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d374c942-7480-49bc-aa9d-3b303a1fe106",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    },
-    "tags": []
-   },
-   "source": [
-    "```java\n",
-    "public static void main(String[] args) {\n",
-    "    System.out.println(\"Hello World\");\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5f160b55-cd4e-4a69-b72e-fdbabcdf301e",
    "metadata": {
     "slideshow": {
@@ -98,7 +98,7 @@
     "tags": []
    },
    "source": [
-    "Laten we de methode stukje bij beetje uitkleden, hier hebben we omringende klasse weggelaten."
+    "Laten we de methode stukje bij beetje uitkleden. Wanneer we de *body* van de methode weglaten (alles wat tussen `{` en `}` staat) houden we de *signatuur* (eng: *signature*) van de methode over."
    ]
   },
   {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e7bf84-b06e-4529-8cff-157705a926cf",
+   "id": "961eed7b-22ac-41a4-a3cc-fac1795bc36e",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -126,7 +126,9 @@
     "tags": []
    },
    "source": [
-    "Als we de *body* van de methode weglaten (alles wat tussen `{` en `}`staat) houden we de *signatuur* van de functie over."
+    "En als we tot slot de *keywords* `public` en `static` weglaten dan bijft uiteindelijk het volgende over en dit is de essentie van een de definitie van een methode.\n",
+    "\n",
+    "Let op, zoals eerder gezegd gaan we later in op de betekenis van deze keywords. Neem voor nu aan (en zeker voor de methode `main`) dat je ze moet gebruiken."
    ]
   },
   {
@@ -142,21 +144,6 @@
     "```java\n",
     "void main(String[] args)\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "961eed7b-22ac-41a4-a3cc-fac1795bc36e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    },
-    "tags": []
-   },
-   "source": [
-    "En als we tot slot de *keywords* `public` en `static` weglaten dan bijft uiteindelijk het volgende over en dit is de essentie van een de definitie van een methode.\n",
-    "\n",
-    "Let op, zoals eerder gezegd gaan we later in op de betekenis van deze keywords. Neem voor nu aan (en zeker voor de methode `main`) dat je ze moet gebruiken."
    ]
   },
   {
@@ -184,7 +171,7 @@
    "source": [
     "Type en naam moeten altijd gedefinieerd worden, het aantal parameters kan 0 of meer zijn.\n",
     "\n",
-    "Java is een *statisch* getypeerde taal en ook voor methoden moet worden aangegeven wat het type van de waarde is die de functie als resultaat teruggeeft. In het geval van `main` is dit niets, oftewel `void` want bedenk dat `System.out.println` alleen maar pixels op het scherm zet..."
+    "Java is een *statisch* getypeerde taal en ook voor methoden moet worden aangegeven wat het type van de waarde is die de functie als resultaat teruggeeft. In het geval van `main` is dit niets, oftewel `void` (bedenk dat `System.out.println` alleen maar pixels op het scherm zet en dus niks teruggeeft)."
    ]
   },
   {
@@ -208,7 +195,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -225,7 +215,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -254,9 +247,7 @@
     "tags": []
    },
    "source": [
-    "In het boek wordt dit voorbeeld gebruikt. Een je ziet hier een nieuwe methode `newLine` met de enige taak een nieuwe regel te printen, een lege regel in dit geval.\n",
-    "\n",
-    "Zodra de methode is gedefinieerd kan het aangeroepen worden, bijvoorbeeld in de methode `main`."
+    "In het boek wordt dit voorbeeld gebruikt. Een je ziet hier een nieuwe methode `newLine` met de enige taak een nieuwe regel te printen, een lege regel in dit geval. Zodra de methode is gedefinieerd kan het aangeroepen worden, bijvoorbeeld in de methode `main`."
    ]
   },
   {
@@ -276,7 +267,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "08bf941c-4cdc-402d-877c-1cee3662a17a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public static void printTwice(String s) {\n",
@@ -293,7 +288,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -343,7 +341,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -362,7 +363,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -421,7 +425,7 @@
    "source": [
     "Nee, dit geeft een syntaxfout, omdat de compiler `int hour` en `int minute` ziet als variabele declaraties, en niet als *expressies* die waarden vertegenwoordigen.\n",
     "\n",
-    "De declaratie van variabelen is al eerder gedaan bij het definiëren van de parameters van de methode `printTime`, jij hoeft deze alleen maar te initialiseren met een concrete waarde."
+    "De declaratie van variabelen is al eerder gedaan bij het definiëren van de parameters van de methode `printTime`; bij het *aanroepen* van de methode hoef je deze alleen maar te *initialiseren* met een concrete waarde."
    ]
   },
   {
@@ -462,7 +466,7 @@
     "tags": []
    },
    "source": [
-    "De `main` methode is speciaal, het is het *entry point* voor een programma, de eerste methode die wordt aangeroepen als een programma start. Het opstarten van een programma gaan we vaak doen via de *comandline*.\n",
+    "De `main` methode is speciaal, het is het *entry point* voor een programma, de eerste methode die wordt aangeroepen als een programma start. Het opstarten van een programma gaan we vaak doen via de *command line*.\n",
     "\n",
     "Maar de methode accepteert wel argumenten, waar komen deze vandaan? Met andere woorden, hoe kan bij het opstarten van het programma argumenten worden doorgegeven?"
    ]
@@ -512,9 +516,9 @@
     "tags": []
    },
    "source": [
-    "In veel Java cursussen wordt vaak voorbij gegaan aan wat de parameter `String[] args` nu precies betekent en hoe het wordt gebruikt. Wij gaan dat wél doen en aan het gebruik (`args[0]`) kan je misschien al raden dat `args` iets als een lijst van waarden moet zijn waar de waarde op positie 0 in dit geval het doorgegeven argument is.\n",
+    "In veel Java-cursussen wordt vaak voorbij gegaan aan wat de parameter `String[] args` nu precies betekent en hoe het wordt gebruikt. Wij gaan dat wél doen en aan het gebruik (`args[0]`) kan je misschien al raden dat `args` iets als een lijst van waarden moet zijn waar de waarde op positie 0 in dit geval het doorgegeven argument is.\n",
     "\n",
-    "`args` is een *array* met elementen van type `String` en we gaan hier later uitgebreid bij arrays stilstaan, inclusief syntax (`String[]`)!\n",
+    "`args` is een *array* met elementen van type `String`: we gaan hier later uitgebreid bij arrays stilstaan, inclusief syntax (`String[]`).\n",
     "\n",
     "Meerdere argumenten kan je op deze manier doorgeven, steeds gescheiden door een spatie."
    ]
@@ -540,7 +544,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -569,7 +576,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -647,7 +657,7 @@
     "Gegeven de formule voor het oppervlak van een cirkel\n",
     "\n",
     "$$\n",
-    "\\pi \\cdot r^2\n",
+    "A = \\pi \\cdot r^2\n",
     "$$"
    ]
   },
@@ -659,7 +669,10 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -678,7 +691,7 @@
     "tags": []
    },
    "source": [
-    "Met het `return` statement laat je de methode een waarde teruggeven, dit moet van het type zijn dat je in de signatuur van de methode hebt aangegeven, in dit geval `double`."
+    "Met het `return` statement laat je de methode een waarde teruggeven; dit moet van het type zijn dat je in de signatuur van de methode hebt aangegeven (in dit geval `double`)."
    ]
   },
   {
@@ -702,7 +715,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [],
    "source": [
@@ -730,7 +746,10 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "tags": []
+    "tags": [],
+    "vscode": {
+     "languageId": "java"
+    }
    },
    "outputs": [
     {
@@ -784,7 +803,7 @@
     "tags": []
    },
    "source": [
-    "Testen, of *debuggen*, is een kwestie van perspectief? Wij adviseren een omgekeerde volgorde!"
+    "Testen, of *debuggen*, is dat een kwestie van perspectief? Wij adviseren een omgekeerde volgorde."
    ]
   },
   {
@@ -812,7 +831,7 @@
     "tags": []
    },
    "source": [
-    "Dit wil niet zeggen dat we print statements afraden als je ergens in de loop van jouw programma de waarde van een variabele wilt weten of waarom het programma een bepaald punt niet lijkt te bereiken. Maar het kan slimmer door gebruik te maken van het gereedschap dat de IDE jou biedt."
+    "Dit wil niet zeggen dat we print statements afraden als je ergens in de loop van je programma de waarde van een variabele wilt weten of waarom het programma een bepaald punt niet lijkt te bereiken. Maar het kan slimmer door gebruik te maken van het gereedschap dat de IDE biedt."
    ]
   },
   {
@@ -903,7 +922,7 @@
     "tags": []
    },
    "source": [
-    "Onderaan in IntelliJ zal een debug *view* zichtbaar worden waar je de staat van het programma op dat moment kan zien."
+    "Onderaan in IntelliJ zal nu een *debug view* zichtbaar worden waar je de staat van het programma op dat moment kan zien."
    ]
   },
   {
@@ -931,7 +950,7 @@
     "tags": []
    },
    "source": [
-    "Bekijk voor IntelliJ de [korte inleiding](https://www.jetbrains.com/help/idea/debugging-your-first-java-application.html) over het gebruik van de debugger. Je zal daar ook zien hoe je een specifieke *debug configuratie* kan aanmaken, bijvoorbeeld als jouw methode `main` via de commandline argumenten moet kunnen accepteren. Maar meer in het algemeen, blader af en toe de [algemene documentatie](https://www.jetbrains.com/help/idea/) door voor de inrichting en gebruik van IntelliJ!"
+    "Bekijk voor IntelliJ de [korte inleiding](https://www.jetbrains.com/help/idea/debugging-your-first-java-application.html) over het gebruik van de debugger. Je zal daar ook zien hoe je een specifieke *debug configuratie* kan aanmaken, bijvoorbeeld als de methode `main` via de commandline argumenten moet kunnen accepteren. Maar meer in het algemeen, blader af en toe de [algemene documentatie](https://www.jetbrains.com/help/idea/) door voor de inrichting en gebruik van IntelliJ."
    ]
   },
   {
