--- a/topics/3b_arrays_en_referenties.ipynb
+++ b/topics/3b_arrays_en_referenties.ipynb
@@ -8,11 +8,10 @@
     "# Arrays en referenties\n",
     "Een **array** is een datastructuur, waarbij meerdere waardes van een bepaald datatype opgeslagen worden.\n",
     "\n",
-    "Dit biedt de mogelijkheid om aan één variabele meerdere waardes toe te kennen.\n",
+    "Dit biedt de mogelijkheid om via één variabele meerdere waardes te adresseren. Een waarde in een **array** wordt een *element* genoemd. Elk element heeft een **index**, een getal dat de positie van het **element** in de **array** aangeeft. Een **index** wordt geteld vanaf 0.\n",
     "\n",
-    "Een waarde in een **array** wordt een element genoemd. Elk element heeft een **index**, een getal dat de positie van het **element** in de **array** aangeeft. Een **index** wordt geteld vanaf 0.\n",
+    "Een waarde (**element**) in een **array** wordt benaderd door de **index** tussen blokhaken (`[` en `]`) te zetten van het gewenste **element**, bijvoorbeeld\n",
     "\n",
-    "Een waarde (**element**) in een **array** wordt benaderd door tussen blokhaken de **index** te zetten van het gewenste **element**, bijvoorbeeld\n",
     "```Java\n",
     "System.out.println(scores[2]); // De derde score\n",
     "```"
@@ -35,7 +34,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "2881982b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int[] scores; // Array van integers met naam 'scores'\n",
@@ -64,7 +67,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "8e6eacdf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "scores = new int[10]; // Array met 10 integers\n",
@@ -87,7 +94,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1b296cf3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int[] scores = new int[10]; // Array met 10 integers\n",
@@ -102,9 +113,11 @@
     "## Arrays gebruiken\n",
     "\n",
     "Het benaderen van een **element**, gebeurt door de **index** tussen blokhaken achter de naam van de **array** te plaatsen:\n",
+    "\n",
     "```Java\n",
     "<naam>[<index>]\n",
     "```\n",
+    "\n",
     "Bijvoorbeeld:"
    ]
   },
@@ -112,7 +125,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2b25b4bb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +156,7 @@
    "source": [
     "## Arrays initialiseren\n",
     "\n",
-    "Ook **elementen** die nog niet een waarde toegekend hebben gekregen, zijn te benaderen.\n",
+    "Ook **elementen** die nog geen waarde toegekend hebben gekregen, zijn wél te benaderen.\n",
     "\n",
     "Bijvoorbeeld:"
    ]
@@ -148,7 +165,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "99af1ddb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -174,8 +195,7 @@
    "id": "a53f8e65",
    "metadata": {},
    "source": [
-    "Waardes in een array worden geïnitialiseerd met de waarde 0, nadat de array is gemaakt.\n",
-    "Voor niet-numerieke types wordt een waarde toegekend die enigszins vergelijkbaar is met 0.\n",
+    "Waardes in een numerieke array worden geïnitialiseerd met de waarde `0`. Voor niet-numerieke types wordt een waarde toegekend die enigszins vergelijkbaar is met 0.\n",
     "\n",
     "| type | geïnitialiseerde waarde |\n",
     "|---|---|\n",
@@ -209,7 +229,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "702b797e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int[] scores = new int[] { 10, 4, 3, 22 };\n",
@@ -221,8 +245,7 @@
    "id": "121c891d",
    "metadata": {},
    "source": [
-    "Als initialisatie in één keer plaatsvindt, dan kan het *new*-keyword achterwege worden gelaten.\n",
-    "Deze wijze van initialiseren heeft wel beperkingen: Alleen mogelijk in combinatie met declaratie van een array, en alle waardes moeten meegegeven worden (gedeeltelijk initialiseren kan niet)."
+    "Als initialisatie in één keer plaatsvindt, dan kan het *new*-keyword achterwege worden gelaten.  Deze wijze van initialiseren heeft wel beperkingen: het is alleen mogelijk in combinatie met de *declaratie* van de array en alle waardes moeten meegegeven worden (gedeeltelijk initialiseren kan niet)."
    ]
   },
   {
@@ -239,7 +262,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "165f1b92",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -258,18 +285,18 @@
    "id": "d697347e",
    "metadata": {},
    "source": [
-    "Wat wordt getoond is niet de inhoud van de array, maar het geheugenadres.\n",
-    "\n",
-    "Om de waardes te laten zien, moeten deze stuk voor stuk worden geprint.\n",
-    "\n",
-    "Dit is eenvoudig te realiseren met een for-loop:"
+    "Wat wordt getoond is niet de inhoud van de array, maar het geheugenadres. Om de waardes te laten zien, moeten deze stuk voor stuk worden geprint. Dit is eenvoudig te realiseren met een for-loop:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "id": "b38953ff",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,7 +310,7 @@
    ],
    "source": [
     "for(int i=0; i<3; i++) {\n",
-    "    System.out.println(\"Score index \"+i+\": \"+scores[i]);\n",
+    "    System.out.f(\"Score index %d: %d\", i, scores[i]);\n",
     "}"
    ]
   },
@@ -292,16 +319,18 @@
    "id": "4156247e",
    "metadata": {},
    "source": [
-    "In bovenstaand voorbeeld is de lengte van de array 'hardcoded' aanwezig.\n",
-    "\n",
-    "Om fouten te voorkomen, wordt meestal de length-property van een array gebruikt:"
+    "In bovenstaand voorbeeld is de lengte van de array 'hardcoded' aanwezig. Om fouten te voorkomen, wordt meestal (altijd?) de property `length` van een array gebruikt:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "id": "d15d2484",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -315,16 +344,16 @@
    ],
    "source": [
     "for(int i=0; i<scores.length; i++) {\n",
-    "\tSystem.out.println(\"Score index \"+i+\": \"+scores[i]);\n",
+    "\tSystem.out.printf(\"Score index %d: %d\", i, scores[i]);\n",
     "}"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "fff45e3f",
    "metadata": {},
    "source": [
-    "De length-property geeft het aantal elementen van de array aan. Dat is het getal wat bij het maken van de array tussen de blokhaken na new staat."
+    "De property `length` geeft het aantal elementen van de array aan. Dat is het getal wat bij het maken van de array tussen de blokhaken na `new` staat."
    ]
   },
   {
@@ -334,7 +363,7 @@
    "source": [
     "## Arrays doorlopen\n",
     "\n",
-    "Met een loop kan een array worden doorlopen. Niet alleen om te printen, maar ook voor operaties op de elementen.\n",
+    "Met een lus (*loop*) kun je een array doorlopen. Natuurlijk niet alleen om te printen, maar ook voor operaties op de elementen.\n",
     "\n",
     "Bijvoorbeeld alle scores met 1 verhogen:"
    ]
@@ -343,7 +372,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "aa136096",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -399,7 +432,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "41ccd6bc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -428,16 +465,18 @@
     "\n",
     "![Array reference](images/3/array_mem_reference.png)\n",
     "\n",
-    "Toekenning van een array aan een andere variabele, kopieëert de inhoud van de array niet, maar alleen de **referentie**.\n",
-    "\n",
-    "Een array kan gekopiëerd worden, door een array van hetzelfde type en dezelfde grootte te maken, en de elementen stuk voor stuk te kopieëren met een for-loop:"
+    "Toekenning van een array aan een andere variabele, kopieert de inhoud van de array niet, maar alleen de **referentie** naar die array. Een array kan gekopieerd worden door een array van hetzelfde type en dezelfde grootte te maken, en de elementen stuk voor stuk te kopiëren met een `for`-loop:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
    "id": "195bd79b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -474,7 +513,7 @@
    "id": "4bf38d2b",
    "metadata": {},
    "source": [
-    "Een andere manier om een array te kopieëren is gebruik maken van de methode *Arrays.copyOf()*.\n",
+    "Een andere manier om een array te kopiëren is gebruik maken van de methode `Arrays.copyOf()`.\n",
     "\n",
     "Voorbeeld:"
    ]
@@ -483,7 +522,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "e6c7ada0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "int[] a = { 3, 50, 20 };\n",
@@ -496,7 +539,7 @@
    "metadata": {},
    "source": [
     "## Willekeurige getallen\n",
-    "Soms is het nodig dat een computerprogramma onvoorspelbaar is. Bijvoorbeeld spelletjes. Een computer is daarom in staat om willekeurige getallen te generen.\n",
+    "Soms, bijvoorbeeld wanneer je met spelletjes bezig bent, is het nodig dat een computerprogramma onvoorspelbaar is. Een computer is daarom in staat om willekeurige getallen te generen.\n",
     "\n",
     "Met Java kan dat op de volgende wijze:"
    ]
@@ -505,7 +548,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "f31ef857",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -517,7 +564,7 @@
    ],
    "source": [
     "Random random = new Random();\n",
-    "int willekeurigGetal=random.nextInt(100); // Willekeurig getal, van 0 tot 100 (99 is het hoogste getal)\n",
+    "int willekeurigGetal = random.nextInt(100); // Willekeurig getal, van 0 tot 100 (99 is het hoogste getal)\n",
     "System.out.println(willekeurigGetal);"
    ]
   },
@@ -526,9 +573,9 @@
    "id": "9c112a0e",
    "metadata": {},
    "source": [
-    "De klasse Random wordt geïmporteerd uit de package java.util.Random.\n",
+    "De klasse `Random` wordt geïmporteerd uit de `package java.util.Random`.\n",
     "\n",
-    "De methode nextInt() kan ook gebruikt worden om een willekeurig element uit een array te halen.\n",
+    "De methode `nextInt()` kan ook gebruikt worden om een willekeurig element uit een array te halen.\n",
     "\n",
     "Voorbeeld:"
    ]
@@ -537,7 +584,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "fdcb2eb3",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -559,8 +610,8 @@
    "id": "56bba10c",
    "metadata": {},
    "source": [
-    "## Enhanced for-loop\n",
-    "Voor de standaard for-loop om een array te doorlopen is een alternatief: De enhanced for-loop. Deze wordt ook wel for-each loop genoemd.\n",
+    "## Enhanced `for`-loop\n",
+    "Voor de standaard `for`-loop om een array te doorlopen is een alternatief: de enhanced `for`-loop Deze wordt ook wel de `for-each`-loop genoemd.\n",
     "\n",
     "Voorbeeld:"
    ]
@@ -569,7 +620,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b4cfdb6b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -604,8 +659,7 @@
    "id": "9f0d7355",
    "metadata": {},
    "source": [
-    "Voordeel van de enhanced for-loop is de eenvoudige syntax.\n",
-    "Er is dan echter geen index beschikbaar. Per situatie moet worden bekeken welk type loop het meest geschikt is."
+    "Een voordeel van de `enhanced for`-loop is de eenvoudige syntax. Er is dan echter geen index beschikbaar. Per situatie moet worden bekeken welk type loop het meest geschikt is."
    ]
   }
  ],
