--- a/_sources/topics/3a_lussen_en_strings.ipynb
+++ b/_sources/topics/3a_lussen_en_strings.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "# Lussen en strings\n",
     "\n",
-    "Handelingen herhalen en tekstuele data"
+    "Werken met herhalende handelingen en met tekstuele data.\n"
    ]
   },
   {
@@ -27,7 +27,17 @@
    "source": [
     "## Oneindige lussen\n",
     "\n",
-    "`while` lussen"
+    "`while` lussen\n",
+    "\n",
+    "De algemene structuur van een `while`-lus is als volgt:\n",
+    "\n",
+    "```java\n",
+    "while(<conditie>) {\n",
+    "    //statements\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Zie het onderstaande voorbeeld:"
    ]
   },
   {
@@ -57,7 +67,7 @@
     "tags": []
    },
    "source": [
-    "De conditie is in dit geval altijd waar en de boodschap zal eindeloos worden herhaald, een oneindige lus."
+    "De conditie is in dit geval altijd *waar* (`true`) en de boodschap (`System.out.println`) zal eindeloos worden herhaald: een oneindige lus."
    ]
   },
   {
@@ -106,7 +116,7 @@
     "tags": []
    },
    "source": [
-    "Zolang de conditie `n > 0` waar is zal de body van de lus worden uitgevoerd."
+    "Zolang de conditie `n > 0` *waar* is, zal de body van de lus worden uitgevoerd."
    ]
   },
   {
@@ -137,7 +147,7 @@
     "    System.out.println(n);\n",
     "    if (n % 2 == 0) {         // n is even\n",
     "        n = n / 2;\n",
-    "    } else {                  // n is odd\n",
+    "    } else {                  // n is oneven\n",
     "        n = 3 * n + 1;\n",
     "    }\n",
     "}\n",
@@ -154,7 +164,7 @@
     "tags": []
    },
    "source": [
-    "Soms is het moeilijk te bepalen of een lus stopt. Deze lus gaat door tot `n` 1 is (wat de conditie `false` maakt).\n",
+    "Soms is het moeilijk (soms zelfs onmogelijk) te bepalen of een lus stopt. De lus hierboven gaat door tot `n` 1 is (wat de conditie `false` maakt).\n",
     "\n",
     "Elke keer dat de lus wordt doorlopen, toont het programma de waarde van `n` en controleert vervolgens of deze even of oneven is. Als het even is, wordt de waarde van `n` door 2 gedeeld. Is het oneven, dan wordt de waarde vervangen door $3n+1$. Bijvoorbeeld, als de beginwaarde 3 is, dan is de resulterende reeks 3, 10, 5, 16, 8, 4, 2, 1.\n",
     "\n",
@@ -285,7 +295,7 @@
     "tags": []
    },
    "source": [
-    "Drie varianten zijn dus mogelijk om dezelde handeling uit te drukken. Misschien zelfs een vierde, want `++n` (of `--n`) is ook mogelijk!"
+    "Drie varianten zijn dus mogelijk om dezelde handeling uit te drukken. Misschien zelfs een vierde, want `++n` (of `--n`) is ook mogelijk."
    ]
   },
   {
@@ -391,9 +401,7 @@
     "tags": []
    },
    "source": [
-    "Zowel de waarden van `i` als `a` worden geïncrementeerd, het verschil tussen beide is wannéér dit gebeurt, voor of ná de expressie.\n",
-    "\n",
-    "`++i` verhoogt het getal *voordat* de huidige uitdrukking wordt geëvalueerd, terwijl `i++` het getal verhoogt *nadat* de uitdrukking is geëvalueerd."
+    "Zowel de waarden van `i` als `a` worden geïncrementeerd, het verschil tussen beide is wannéér dit gebeurt: voor of ná de expressie. De syntax `++i` verhoogt het getal *voordat* de huidige uitdrukking wordt geëvalueerd, terwijl `i++` het getal verhoogt *nadat* de uitdrukking is geëvalueerd."
    ]
   },
   {
@@ -1690,7 +1698,7 @@
     "tags": []
    },
    "source": [
-    "Nu lijken het wel dezelfde objecten wat betreft zowel identiteit als waarde?!? Er is iets bijzonders aan de hand met strings, lees om deze reden [String Mystery](3c_string_mystery) door voor de achtergrond van dit gedrag, het heeft alles te maken hoe strings worden aangemaakt en optimalisaties die de JVM toepast."
+    "Nu lijken het wel dezelfde objecten wat betreft zowel identiteit als waarde. Er is iets bijzonders aan de hand met strings, lees om deze reden [String Mystery](3c_string_mystery) door voor de achtergrond van dit gedrag, het heeft alles te maken hoe strings worden aangemaakt en optimalisaties die de JVM toepast."
    ]
   },
   {
@@ -1705,7 +1713,7 @@
    "source": [
     "### De boodschap\n",
     "\n",
-    "Gebruik altijd `equals` als je wilt vergelijken op *waarde*!"
+    "Gebruik altijd `equals` als je wilt vergelijken op *waarde*."
    ]
   }
  ],
@@ -1721,7 +1729,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.11+9-Ubuntu-0ubuntu2"
+   "version": "17.0.5+8-LTS"
   }
  },
  "nbformat": 4,
